--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "faker": "^3.1.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
